--- a/src/main/resources/at/fellhofer/jira/adminhelper/i18n.properties
+++ b/src/main/resources/at/fellhofer/jira/adminhelper/i18n.properties
@@ -14,5 +14,5 @@
 # limitations under the License.
 #
 
-admin_helper.admin.section=AdminHelper Configuration
-admin_helper.admin.label=AdminHelper
+admin_helper.admin.section=Cookies
+admin_helper.admin.label=Helper Configuration
