--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>at.fellhofer.jira</groupId>
+    <groupId>at.fellhofer.jira.adminhelper</groupId>
     <artifactId>AdminHelper</artifactId>
     <version>0.1-SNAPSHOT</version>
     <organization>
         <name>Stephan Fellhofer</name>
-        <url>https://github.com/felly/adminhelper</url>
+        <url>https://github.com/felly/jiraadminhelper</url>
     </organization>
     <name>AdminHelper</name>
     <description>This plugin should help Admins to easily create new users.</description>
