--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
         <dependency>
             <groupId>com.atlassian.jira.tests</groupId>
             <artifactId>jira-func-test-basics</artifactId>
-            <version>1.9.5</version>
+            <version>1.9.7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -167,12 +167,28 @@
             <scope>test</scope>
         </dependency>
         <!-- Testing Dependencies -->
+        <!-- Selenium Begin -->
         <dependency>
             <groupId>com.atlassian.selenium</groupId>
             <artifactId>atlassian-selenium-browsers-auto</artifactId>
-            <version>2.3-PHANTOM_JS_SPIKE</version>
+            <version>2.3-m11</version>
             <scope>test</scope>
         </dependency>
+        <!-- Following Libraries might be irrelevant -->
+        <!--
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.3</version>
+            <scope>test</scope>
+        </dependency>-->
+        <!-- Selenium End -->
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-tests</artifactId>
@@ -200,6 +216,7 @@
                     <jvmArgs>-Xms1g -Xmx2g -XX:MaxPermSize=1g -XX:-UseGCOverheadLimit -server</jvmArgs>
                     <systemPropertyVariables>
                         <atlassian.mail.senddisabled>false</atlassian.mail.senddisabled>
+                        <selenium.browser>*firefox</selenium.browser> <!-- firefox-3.6, chrome-6 and chrome-7 -->
                     </systemPropertyVariables>
                     <pluginArtifacts>
                         <pluginArtifact>
@@ -224,12 +241,11 @@
     </build>
     <properties>
         <jira.version>7.0.0</jira.version>
-        <amps.version>5.0.13</amps.version>
+        <amps.version>5.1.18</amps.version>
         <ao.version>1.1.0</ao.version>
-        <rest.version>2.7.1</rest.version>
-        <plugin.testrunner.version>1.2.0</plugin.testrunner.version>
+        <plugin.testrunner.version>1.2.3</plugin.testrunner.version>
         <!-- TestKit version 5.x for JIRA 5.x, 6.x for JIRA 6.x -->
-        <testkit.version>6.3.11</testkit.version>
+        <testkit.version>7.0.101</testkit.version>
         <xvfb.enable>true</xvfb.enable>
     </properties>
 </project>
