--- a/pom.xml
+++ b/pom.xml
@@ -216,7 +216,7 @@
                     <jvmArgs>-Xms1g -Xmx2g -XX:MaxPermSize=1g -XX:-UseGCOverheadLimit -server</jvmArgs>
                     <systemPropertyVariables>
                         <atlassian.mail.senddisabled>false</atlassian.mail.senddisabled>
-                        <selenium.browser>*firefox</selenium.browser> <!-- firefox-3.6, chrome-6 and chrome-7 -->
+                        <!--<selenium.browser>*firefox</selenium.browser> &lt;!&ndash; firefox-3.6, chrome-6 and chrome-7 &ndash;&gt;-->
                     </systemPropertyVariables>
                     <pluginArtifacts>
                         <pluginArtifact>
@@ -241,7 +241,7 @@
     </build>
     <properties>
         <jira.version>7.0.0</jira.version>
-        <amps.version>5.1.18</amps.version>
+        <amps.version>6.1.2</amps.version>
         <ao.version>1.1.0</ao.version>
         <plugin.testrunner.version>1.2.3</plugin.testrunner.version>
         <!-- TestKit version 5.x for JIRA 5.x, 6.x for JIRA 6.x -->
